--- a/.github/workflows/auto-merge-crowdin.yml
+++ b/.github/workflows/auto-merge-crowdin.yml
@@ -1,7 +1,7 @@
 name: Auto-Merge Translations from Crowdin
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
     # Only run if pull request includes changes in translation files
