--- a/.github/workflows/auto-merge-crowdin.yml
+++ b/.github/workflows/auto-merge-crowdin.yml
@@ -15,8 +15,14 @@ jobs:
     if: github.event.pull_request.user.login == 'paescuj' && github.event.pull_request.title == 'New Crowdin updates' && github.head_ref == 'translations'
     runs-on: ubuntu-latest
     steps:
-      - name: Enable auto-merge
-        run: gh pr merge --auto --squash "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - uses: reitermarkus/automerge@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          merge-method: squash
+          do-not-merge-labels: do-not-merge
+          pull-request: ${{ github.event.pull_request.id }}
+      #- name: Enable auto-merge
+      #  run: gh pr merge --auto --squash "$PR_URL"
+      #  env:
+      #    PR_URL: ${{github.event.pull_request.html_url}}
+      #    GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
