--- a/.github/workflows/auto-merge-crowdin.yml
+++ b/.github/workflows/auto-merge-crowdin.yml
@@ -15,13 +15,14 @@ jobs:
     if: github.event.pull_request.user.login == 'paescuj' && github.event.pull_request.title == 'New Crowdin updates' && github.head_ref == 'translations'
     runs-on: ubuntu-latest
     steps:
-      - name: Enable auto-merge
-        uses: peter-evans/enable-pull-request-automerge@v1
-        with:
-          #token: ${{ secrets.BOT_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ github.event.pull_request.number }}
-          merge-method: squash
+      - run: exit
+      #- name: Enable auto-merge
+      #  uses: peter-evans/enable-pull-request-automerge@v1
+      #  with:
+      #    #token: ${{ secrets.BOT_TOKEN }}
+      #    token: ${{ secrets.GITHUB_TOKEN }}
+      #    pull-request-number: ${{ github.event.pull_request.number }}
+      #    merge-method: squash
       #  run: gh pr merge --auto --squash "$PR_URL"
       #  env:
       #    PR_URL: ${{github.event.pull_request.html_url}}
