--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,10 +2,16 @@ name: End-to-End Tests
 
 on:
   workflow_call:
+    inputs:
+      should_skip:
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   test:
     name: Test
+    if: inputs.should_skip != 'true'
     runs-on: ubuntu-latest
     steps:
       - run: exit 1
