--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,6 +37,19 @@ jobs:
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
+   test:
+     runs-on: ubunut-latest
+    needs: pre_check
+     steps:
+       - run: |
+         echo ${{ needs.pre_check.outputs.should_skip }}
+         echo ${{ needs.pre_check.outputs.successful_duplicate.event }}
+         echo ${{ github.event_name != 'push' }}
+         echo ${{ needs.pre_check.outputs.should_skip == 'true' }}
+         echo ${{ needs.pre_check.outputs.successful_duplicate.event == 'push' }}
+         echo ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push' }}
+         echo ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push') }}
+
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
     name: End-to-End Tests
