--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -38,7 +38,7 @@ jobs:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
   test:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
     needs: pre_check
     steps:
       - run: |
