--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,13 +42,13 @@ jobs:
     needs: pre_check
     steps:
       - run: |
-          echo should_skip (plain) ${{ needs.pre_check.outputs.should_skip }}
-          echo successful_duplicate.event (plain) ${{ needs.pre_check.outputs.successful_duplicate.event }}
-          echo github.event_name ${{ github.event_name != 'push' }}
-          echo should_skip ${{ needs.pre_check.outputs.should_skip == 'true' }}
-          echo successful_duplicate.event ${{ needs.pre_check.outputs.successful_duplicate.event == 'push' }}
-          echo test group 2 ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push' }}
-          echo test whole ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push') }}
+          echo "should_skip (plain) ${{ needs.pre_check.outputs.should_skip }}"
+          echo "successful_duplicate.event (plain) ${{ needs.pre_check.outputs.successful_duplicate.event }}"
+          echo "github.event_name ${{ github.event_name != 'push' }}"
+          echo "should_skip ${{ needs.pre_check.outputs.should_skip == 'true' }}"
+          echo "successful_duplicate.event ${{ needs.pre_check.outputs.successful_duplicate.event == 'push' }}"
+          echo "test group 2 ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push' }}"
+          echo "test whole ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push') }}"
 
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
