--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,7 +17,7 @@ jobs:
       # - Exact same files have been successfully checked in older run
       # - Only files that do not require checks have been changed (paths_ignore)
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
-      successful_duplicate: ${{ steps.skip_check.outputs.successful_duplicate }}
+      skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
     steps:
       - name: Check if workflow is skippable
         id: skip_check
@@ -43,9 +43,10 @@ jobs:
     steps:
       - uses: actions/github-script@v5
         env:
-          SUCCESSFUL_DUPLICATE: ${{ needs.pre_check.outputs.successful_duplicate }}
+          SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by }}
         with:
-          script: console.log(process.env.SUCCESSFUL_DUPLICATE)
+          script: |
+            console.log(process.env.SKIPPED_BY)
 
   test:
     runs-on: ubuntu-latest
@@ -53,12 +54,12 @@ jobs:
     steps:
       - run: |
           echo "should_skip (plain) ${{ needs.pre_check.outputs.should_skip }}"
-          echo "successful_duplicate.event (plain) ${{ needs.pre_check.outputs.successful_duplicate.event }}"
+          echo "successful_duplicate.event (plain) ${{ needs.pre_check.outputs.skipped_by.event }}"
           echo "github.event_name ${{ github.event_name != 'push' }}"
           echo "should_skip ${{ needs.pre_check.outputs.should_skip == 'true' }}"
-          echo "successful_duplicate.event ${{ needs.pre_check.outputs.successful_duplicate.event == 'push' }}"
-          echo "test group 2 ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push' }}"
-          echo "test whole ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push') }}"
+          echo "successful_duplicate.event ${{ needs.pre_check.outputs.skipped_by.event == 'push' }}"
+          echo "test group 2 ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push' }}"
+          echo "test whole ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push') }}"
 
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
@@ -66,4 +67,4 @@ jobs:
     needs: pre_check
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
-      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.successful_duplicate.event == 'push') }}
+      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push') }}
