--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -54,7 +54,7 @@ jobs:
     steps:
       - run: |
           echo "should_skip (plain) ${{ needs.pre_check.outputs.should_skip }}"
-          echo "skipped_by (plain) ${{ toJSON(needs.pre_check.outputs.skipped_by) }}"
+          echo "skipped_by (plain) ${{ toJSON(needs.pre_check.outputs.skipped_by).event }}"
           echo "skipped_by.event (plain) ${{ needs.pre_check.outputs.skipped_by.event }}"
           echo "github.event_name ${{ github.event_name != 'push' }}"
           echo "should_skip ${{ needs.pre_check.outputs.should_skip == 'true' }}"
