--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,24 +43,10 @@ jobs:
     steps:
       - uses: actions/github-script@v5
         env:
-          SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by }}
+          SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by.event }}
         with:
           script: |
             console.log(process.env.SKIPPED_BY)
-
-  test:
-    runs-on: ubuntu-latest
-    needs: pre_check
-    steps:
-      - run: |
-          echo "should_skip (plain) ${{ needs.pre_check.outputs.should_skip }}"
-          echo "skipped_by (plain) ${{ toJSON(needs.pre_check.outputs.skipped_by).event }}"
-          echo "skipped_by.event (plain) ${{ needs.pre_check.outputs.skipped_by.event }}"
-          echo "github.event_name ${{ github.event_name != 'push' }}"
-          echo "should_skip ${{ needs.pre_check.outputs.should_skip == 'true' }}"
-          echo "successful_duplicate.event ${{ needs.pre_check.outputs.skipped_by.event == 'push' }}"
-          echo "test group 2 ${{ needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push' }}"
-          echo "test whole ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push') }}"
 
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
