--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/github-script@v5
         env:
-          SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by.event }}
+          SKIPPED_BY: ${{ fromJSON(needs.pre_check.outputs.skipped_by) }}
         with:
           script: |
             console.log(process.env.SKIPPED_BY)
