--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,6 +18,7 @@ jobs:
       # - Only files that do not require checks have been changed (paths_ignore)
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
       skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
+      all: ${{ steps.skip_check.outputs }}
     steps:
       - name: Check if workflow is skippable
         id: skip_check
@@ -44,10 +45,13 @@ jobs:
       - uses: actions/github-script@v5
         env:
           SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by }}
+          SKIPPED_BY_2: ${{ needs.pre_check.outputs.should_skip == 'true' && toJSON(needs.pre_check.outputs.skipped_by).event }}
+          ALL: ${{ needs.pre_check.outputs.all }}
         with:
           script: |
             console.log(process.env.SKIPPED_BY)
-            console.log(process.env.SKIPPED_BY.event)
+            console.log(process.env.SKIPPED_BY_2)
+            console.log(process.env.ALL)
 
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
