--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,23 +37,10 @@ jobs:
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
-  test2:
-    runs-on: ubuntu-latest
-    needs: pre_check
-    steps:
-      - uses: actions/github-script@v5
-        env:
-          SKIPPED_BY: ${{ needs.pre_check.outputs.skipped_by }}
-          SKIPPED_BY_2: ${{ needs.pre_check.outputs.should_skip == 'true' && fromJSON(needs.pre_check.outputs.skipped_by).event }}
-        with:
-          script: |
-            console.log(process.env.SKIPPED_BY)
-            console.log(process.env.SKIPPED_BY_2)
-
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
     name: End-to-End Tests
     needs: pre_check
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
-      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && needs.pre_check.outputs.skipped_by.event == 'push') }}
+      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
