--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,7 +17,8 @@ jobs:
       # - Exact same files have been successfully checked in older run
       # - Only files that do not require checks have been changed (paths_ignore)
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
-      skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
+      #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
+      skipped_by: 'test'
     steps:
       - name: Check if workflow is skippable
         id: skip_check
