--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,7 +16,8 @@ jobs:
       # Returns 'true' if workflow is skippable for one of the following reasons:
       # - Exact same files have been successfully checked in older run
       # - Only files that do not require checks have been changed (paths_ignore)
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+      #should_skip: ${{ steps.skip_check.outputs.should_skip }}
+      should_skip: 'true'
       #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
       skipped_by: 'test'
     steps:
@@ -44,4 +45,4 @@ jobs:
     needs: pre_check
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
-      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.should_skip == 'true' && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
+      should_skip: ${{ github.event_name != 'push' || (fromJSON(needs.pre_check.outputs.skipped_by) && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
