--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -45,4 +45,4 @@ jobs:
     needs: pre_check
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
-      should_skip: ${{ github.event_name != 'push' || (fromJSON(needs.pre_check.outputs.skipped_by) && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
+      should_skip: ${{ github.event_name != 'push' || (fromJSON(needs.pre_check.outputs.skipped_by).event && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
