--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,7 +19,7 @@ jobs:
       #should_skip: ${{ steps.skip_check.outputs.should_skip }}
       should_skip: 'true'
       #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
-      #skipped_by: ''
+      skipped_by: ''
     steps:
       - name: Check if workflow is skippable
         id: skip_check
@@ -45,4 +45,4 @@ jobs:
     needs: pre_check
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
-      should_skip: ${{ github.event_name != 'push' || (fromJSON(needs.pre_check.outputs.skipped_by) && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
+      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.skipped_by && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
