--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,8 @@ jobs:
       # - Only files that do not require checks have been changed (paths_ignore)
       #should_skip: ${{ steps.skip_check.outputs.should_skip }}
       should_skip: 'true'
-      skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
+      #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
+      skipped_by: '{"name": "aha"}'
     steps:
       - run: exit 1
         id: skip_check
