--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,7 +19,7 @@ jobs:
       #should_skip: ${{ steps.skip_check.outputs.should_skip }}
       should_skip: 'true'
       #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
-      skipped_by: '{"name": "aha"}'
+      skipped_by: '{"event": "push"}'
     steps:
       - run: exit 1
         id: skip_check
