--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,24 +16,19 @@ jobs:
       # Returns 'true' if workflow is skippable for one of the following reasons:
       # - Exact same files have been successfully checked in older run
       # - Only files that do not require checks have been changed (paths_ignore)
-      #should_skip: ${{ steps.skip_check.outputs.should_skip }}
-      should_skip: 'true'
-      #skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
-      skipped_by: '{"event": "push"}'
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+      skipped_by: ${{ steps.skip_check.outputs.skipped_by }}
     steps:
-      - run: exit 1
-        id: skip_check
-        continue-on-error: true
-        #- name: Check if workflow is skippable
-        #  id: skip_check
-        #  uses: paescuj/skip-duplicate-actions@revision
-        #  # Run all the jobs if the pre-check should fail for any reason
-        #  # (the pre-check will be marked as 'passed', better solution pending at https://github.com/actions/toolkit/issues/399)
-        #  continue-on-error: true
-        #  with:
-        #    # Cancel outdated workflow-runs
-        #    cancel_others: 'true'
-        #    paths_ignore: '["app/src/lang/translations/*.yaml"]'
+        - name: Check if workflow is skippable
+          id: skip_check
+          uses: paescuj/skip-duplicate-actions@revision
+          # Run all the jobs if the pre-check should fail for any reason
+          # (the pre-check will be marked as 'passed', better solution pending at https://github.com/actions/toolkit/issues/399)
+          continue-on-error: true
+          with:
+            # Cancel outdated workflow-runs
+            cancel_others: 'true'
+            paths_ignore: '["app/src/lang/translations/*.yaml"]'
 
   lint:
     name: Lint
