--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,13 @@ jobs:
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
+  unit_tests:
+    name: Unit Tests
+    needs: pre_check
+    uses: test-workflows/worflow-test/.github/workflows/unit-tests.yml@main
+    with:
+      should_skip: ${{ needs.pre_check.outputs.should_skip }}
+
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
     name: End-to-End Tests
