--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,3 +18,13 @@ jobs:
           - '16'
     steps:
       - run: echo ${{ matrix.node-version }}
+
+  check:
+    name: Check
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Check build matrix status
+        if: ${{ needs.test.result != 'success' }}
+        run: exit 1
