--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,7 +17,7 @@ jobs:
         node-version:
           - '16'
     steps:
-      - run: echo ${{ matrix.node-version }}
+      - run: exit 1
 
   result:
     name: Result
