--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,20 @@ jobs:
     uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
       should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.skipped_by && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
+
+  post_check:
+    name: Post-Check
+    runs-on: ubuntu-latest
+    needs: e2e_tests
+    steps:
+      - uses: actions/github-script@v5
+        with:
+          script: |
+            github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: 'success',
+              context: 'CI',
+              description: 'Skipped',
+            })
