--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
     name: Post-Check
     runs-on: ubuntu-latest
     needs: e2e_tests
+    if: ${{ always() }}
     steps:
       - uses: actions/github-script@v5
         with:
@@ -65,6 +66,6 @@ jobs:
               repo: context.repo.repo,
               sha: context.sha,
               state: 'success',
-              context: 'CI',
+              context: 'CI / Unit Tests',
               description: 'Skipped',
             })
