--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ jobs:
   unit_tests:
     name: Unit Tests
     needs: pre_check
+    if: github.event_name == 'push'
+    #if: needs.pre_check.outputs.should_skip != 'true'
     uses: test-workflows/workflow-test/.github/workflows/unit-tests.yml@main
-    with:
-      should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
   # Run end-to-end tests only on push events (on main branch) for now
   e2e_tests:
@@ -55,8 +55,8 @@ jobs:
   post_check:
     name: Post-Check
     runs-on: ubuntu-latest
-    needs: e2e_tests
-    if: ${{ always() }}
+    needs: unit_tests
+    if: ${{ always() && github.event_name == 'pull_request' }}
     steps:
       - uses: actions/github-script@v5
         with:
