--- a/.github/workflows/ci-post.yml
+++ b/.github/workflows/ci-post.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/github-script@v5
         env:
-          WORKFLOW: ${{ github.event.workflow_run }}
+          WORKFLOW: ${{ fromJSON(github.event.workflow_run) }}
         with:
           script: |
             github.rest.repos.createCommitStatus({
