--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,10 +21,8 @@ jobs:
 
   result:
     name: Result
-    if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: Verify test result
-        if: inputs.should_skip != 'true' && needs.test.result != 'success'
-        run: exit 1
+      - name: All tests succeeded
+        run: echo "🎉"
