--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,14 @@ jobs:
   lint:
     name: Lint
     needs: pre_check
-    uses: test-workflows/workflow-test/.github/workflows/lint.yml@main
+    uses: paescuj/workflow-test/.github/workflows/lint.yml@main
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
   unit_tests:
     name: Unit Tests
     needs: pre_check
-    uses: test-workflows/workflow-test/.github/workflows/unit-tests.yml@main
+    uses: paescuj/workflow-test/.github/workflows/unit-tests.yml@main
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
 
@@ -48,6 +48,6 @@ jobs:
   e2e_tests:
     name: End-to-End Tests
     needs: pre_check
-    uses: test-workflows/workflow-test/.github/workflows/e2e-tests.yml@main
+    uses: paescuj/workflow-test/.github/workflows/e2e-tests.yml@main
     with:
       should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.skipped_by && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
