--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,3 +14,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: exit 0
+
+  check_types_vue:
+    name: Check Types in Vue Files
+    if: inputs.should_skip != 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: npm
+
+      - name: Checking types
+        run: |
+          npx tsc --build app
+          npx vue-tsc --project app
