--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,6 +29,9 @@ jobs:
           node-version: '16'
           cache: npm
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Checking types
         run: |
           npx tsc --build app
