--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Checking types
-        run: |
-          npx tsc --build app || true
-          npx vue-tsc --project app
+      - name: Run tsc
+        run: npx tsc --build app
+      - name: Check types
+        run: npx vue-tsc --project app
