--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tsc
-        run: npx tsc --build app
       - name: Check types
-        run: npx vue-tsc --project app
+        shell: sh {0}
+        run: |
+          npx tsc --build app
+          npx vue-tsc --project app
