--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
         - name: Check if workflow is skippable
           id: skip_check
-          uses: paescuj/skip-duplicate-actions@revision
+          uses: fkirc/skip-duplicate-actions@master
           # Run all the jobs if the pre-check should fail for any reason
           # (the pre-check will be marked as 'passed', better solution pending at https://github.com/actions/toolkit/issues/399)
           continue-on-error: true
@@ -43,11 +43,3 @@ jobs:
     uses: paescuj/workflow-test/.github/workflows/unit-tests.yml@main
     with:
       should_skip: ${{ needs.pre_check.outputs.should_skip }}
-
-  # Run end-to-end tests only on push events (on main branch) for now
-  e2e_tests:
-    name: End-to-End Tests
-    needs: pre_check
-    uses: paescuj/workflow-test/.github/workflows/e2e-tests.yml@main
-    with:
-      should_skip: ${{ github.event_name != 'push' || (needs.pre_check.outputs.skipped_by && fromJSON(needs.pre_check.outputs.skipped_by).event == 'push') }}
