--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,8 @@ jobs:
               app:
                 paths:
                   - 'app/**/*'
-            #paths_ignore: '["app/src/lang/translations/*.yaml"]'
+                paths_ignore:
+                  - 'app/src/lang/translations/*.yaml'
         - name: Test output
           run: echo ${{ steps.skip_check.outputs.result }}
 
