--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
             echo ${{ steps.skip_check.outputs.skip_reason }}
             echo ${{ steps.skip_check.outputs.changed_files }}
             echo ${{ steps.skip_check.outputs.paths_result }}
+        - name: Test if
+          if: steps.skip_check.outputs.paths_result.app.should_skip != 'true'
+          run: echo "I run"
 
   lint:
     name: Lint
