--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,20 +28,21 @@ jobs:
           with:
             # Cancel outdated workflow-runs
             cancel_others: 'true'
+            paths_ignore: 'app/src/lang/translations/*.yaml'
             paths_filter: |
-              app:
+              api:
                 paths:
-                  - 'app/**/*'
+                  - 'api/**/*'
         - name: Test output
           run: |
             echo ${{ steps.skip_check.outputs.should_skip }}
+            echo ${{ steps.skip_check.outputs.reason }}
             echo ${{ steps.skip_check.outputs.skipped_by }}
-            echo ${{ steps.skip_check.outputs.skip_reason }}
             echo ${{ steps.skip_check.outputs.changed_files }}
             echo ${{ steps.skip_check.outputs.paths_result }}
-        - name: Test if
-          if: steps.skip_check.outputs.should_skip != 'true' && !fromJSON(steps.skip_check.outputs.paths_result).app.should_skip
-          run: echo "I run"
+        - name: Test api
+          if: steps.skip_check.outputs.should_skip != 'true' && !fromJSON(steps.skip_check.outputs.paths_result).api.should_skip
+          run: echo "Test api runs"
 
   lint:
     name: Lint
