--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,7 @@ jobs:
           with:
             # Cancel outdated workflow-runs
             cancel_others: 'true'
-            paths_ignore:
-              - 'app/src/lang/translations/*.yaml'
+            paths_ignore: ['app/src/lang/translations/*.yaml']
             paths_filter: |
               api:
                 paths:
