check back comp 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
           with:
             # Cancel outdated workflow-runs
             cancel_others: 'true'
+            paths_ignore: ['app/src/languages/*.yaml']
+            paths: ['api']
         - name: Test output
           run: |
             echo ${{ steps.skip_check.outputs.should_skip }}
