--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,14 @@ jobs:
             # Cancel outdated workflow-runs
             cancel_others: 'true'
             paths_ignore: '["app/src/languages/*.yaml"]'
-            paths: '["api/**/*"]'
+            paths_filter: |
+              app:
+                paths:
+                  - 'app/**/*'
+              api:
+                backtracking: false
+                paths:
+                  - 'api/**/*'
         - name: Test output
           run: |
             echo ${{ steps.skip_check.outputs.should_skip }}
