--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
             echo ${{ steps.skip_check.outputs.skipped_by }}
             echo ${{ steps.skip_check.outputs.changed_files }}
             echo '${{ toJSON(fromJSON(steps.skip_check.outputs.changed_files)[0]) }}'
-            echo '${{ toJSON(fromJSON(steps.skip_check.outputs.changed_files).*) }}'
+            echo '${{ toJSON(join(steps.skip_check.outputs.changed_files, ', ')) }}'
             echo '${{ steps.skip_check.outputs.paths_result }}'
         - name: Test api
           if: steps.skip_check.outputs.should_skip != 'true' && !fromJSON(steps.skip_check.outputs.paths_result).api.should_skip
