--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -11,8 +11,7 @@ jobs:
   auto-merge:
     name: Auto-Merge
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
+    if: github.event.workflow_run.event == 'pull_request'
     steps:
       - name: test
         run: echo '${{ toJSON(github.event) }}'
