--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -4,3 +4,6 @@ version = 1
 method = "squash"
 delete_branch_on_merge = true
 show_missing_automerge_label_message = false
+
+[approve]
+auto_approve_labels = ["automerge"]
