--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
         - name: Check if workflow is skippable
           id: skip_check
-          uses: paescuj/skip-duplicate-actions@path-filters
+          uses: fkirc/skip-duplicate-actions@master
           # Run all the jobs if the pre-check should fail for any reason
           # (the pre-check will be marked as 'passed', better solution pending at https://github.com/actions/toolkit/issues/399)
           continue-on-error: true
